<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:itemTextColor="@color/black"
    app:itemIconTint="@color/black"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.pruebas.rincon_alfonsoimdbapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="edu.pruebas.rincon_alfonsoimdbapp.ui.gallery.SearchFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="edu.pruebas.rincon_alfonsoimdbapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>